# weather_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: weather_app.yml  weather_app_users.yml
static/js/: index.js
users/: forms.py  urls.py  views.py
users/templates/registration/: logout.html  sign_up.html
users/templates/users/: dashboards.html
weather/: admin.py  functions.py  models.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/: base.html
weather/templates/weather/: weather.html
weatherapp/: settings.py  urls.py
